RESOLVED FIXED225940
Link Baseline JIT code off the main thread
https://bugs.webkit.org/show_bug.cgi?id=225940
Summary Link Baseline JIT code off the main thread
Saam Barati
Reported 2021-05-18 15:34:39 PDT
...
Attachments
patch (12.19 KB, patch)
2021-05-18 16:38 PDT, Saam Barati
no flags
patch (12.19 KB, patch)
2021-05-18 16:39 PDT, Saam Barati
ysuzuki: review+
patch for landing (12.23 KB, patch)
2021-05-18 16:55 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2021-05-18 16:38:20 PDT
Saam Barati
Comment 2 2021-05-18 16:39:31 PDT
Yusuke Suzuki
Comment 3 2021-05-18 16:42:27 PDT
Comment on attachment 428998 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=428998&action=review r=me > Source/JavaScriptCore/jit/JIT.cpp:1008 > + if (!m_jitCode) Let's add assertion that ensures this is not compilation thread.
Saam Barati
Comment 4 2021-05-18 16:43:16 PDT
Comment on attachment 428998 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=428998&action=review >> Source/JavaScriptCore/jit/JIT.cpp:1008 >> + if (!m_jitCode) > > Let's add assertion that ensures this is not compilation thread. sounds good
Saam Barati
Comment 5 2021-05-18 16:55:18 PDT
Created attachment 429000 [details] patch for landing
EWS
Comment 6 2021-05-19 09:35:01 PDT
Committed r277725 (237902@main): <https://commits.webkit.org/237902@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429000 [details].
Radar WebKit Bug Importer
Comment 7 2021-05-19 09:35:17 PDT
Note You need to log in before you can comment on or make changes to this bug.