Source/JavaScriptCore/jit/JITWorklist.cpp
@@ -44,15 +44,15 @@ public:
     
     void compileInThread()
     {
-        m_jit.compileWithoutLinking(JITCompilationCanFail);
+        m_jit.compileAndLinkWithoutFinalizing(JITCompilationCanFail);
         
         LockHolder locker(m_lock);
         m_isFinishedCompiling = true;
     }
     
-    void finalize()
+    void finalize(bool needsFence)
     {
-        CompilationResult result = m_jit.link();
+        CompilationResult result = m_jit.finalizeOnMainThread();
         switch (result) {
         case CompilationFailed:
             CODEBLOCK_LOG_EVENT(m_codeBlock, "delayJITCompile", ("compilation failed"));
@@ -61,6 +61,8 @@ public:
             m_codeBlock->m_didFailJITCompilation = true;
             return;
         case CompilationSuccessful:
+            if (needsFence)
+                WTF::crossModifyingCodeFence();
             dataLogLnIf(Options::verboseOSR(), "    JIT compilation successful.");
             m_codeBlock->ownerExecutable()->installCode(m_codeBlock);
             m_codeBlock->jitSoon();
@@ -80,11 +82,11 @@ public:
         return m_isFinishedCompiling;
     }
     
-    static void compileNow(CodeBlock* codeBlock, BytecodeIndex loopOSREntryBytecodeIndex)
+    static void compileOnMainThreadNow(CodeBlock* codeBlock, BytecodeIndex loopOSREntryBytecodeIndex)
     {
         Plan plan(codeBlock, loopOSREntryBytecodeIndex);
         plan.compileInThread();
-        plan.finalize();
+        plan.finalize(false);
     }
     
 private:
@@ -235,7 +237,7 @@ void JITWorklist::compileLater(CodeBlock* codeBlock, BytecodeIndex loopOSREntryB
     }
     
     if (!Options::useConcurrentJIT()) {
-        Plan::compileNow(codeBlock, loopOSREntryBytecodeIndex);
+        Plan::compileOnMainThreadNow(codeBlock, loopOSREntryBytecodeIndex);
         return;
     }
     
@@ -273,45 +275,13 @@ void JITWorklist::compileLater(CodeBlock* codeBlock, BytecodeIndex loopOSREntryB
     // This works around the issue. If the concurrent JIT thread is convoyed, we revert to main
     // thread compiles. This is probably not as good as if we had multiple JIT threads. Maybe we
     // can do that someday.
-    Plan::compileNow(codeBlock, loopOSREntryBytecodeIndex);
-}
-
-void JITWorklist::compileNow(CodeBlock* codeBlock, BytecodeIndex loopOSREntryBytecodeIndex)
-{
-    VM& vm = codeBlock->vm();
-    DeferGC deferGC(vm.heap);
-    if (codeBlock->jitType() != JITType::InterpreterThunk)
-        return;
-    
-    bool isPlanned;
-    {
-        LockHolder locker(*m_lock);
-        isPlanned = m_planned.contains(codeBlock);
-    }
-    
-    if (isPlanned) {
-        RELEASE_ASSERT(Options::useConcurrentJIT());
-        // This is expensive, but probably good enough.
-        completeAllForVM(vm);
-    }
-    
-    // Now it might be compiled!
-    if (codeBlock->jitType() != JITType::InterpreterThunk)
-        return;
-    
-    // We do this in case we had previously attempted, and then failed, to compile with the
-    // baseline JIT.
-    codeBlock->resetJITData();
-    
-    // OK, just compile it.
-    JIT::compile(vm, codeBlock, JITCompilationMustSucceed, loopOSREntryBytecodeIndex);
-    codeBlock->ownerExecutable()->installCode(codeBlock);
+    Plan::compileOnMainThreadNow(codeBlock, loopOSREntryBytecodeIndex);
 }
 
 void JITWorklist::finalizePlans(Plans& myPlans)
 {
     for (RefPtr<Plan>& plan : myPlans) {
-        plan->finalize();
+        plan->finalize(true);
         
         LockHolder locker(*m_lock);
         m_planned.remove(plan->codeBlock());
